[project]
name = "comfyui"
version = "0.3.10"
description = "ComfyUI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.11",
    "einops>=0.8.0",
    "kornia>=0.7.1",
    "pillow>=11.0.0",
    "psutil>=6.1.1",
    "pyyaml>=6.0.2",
    "safetensors>=0.4.2",
    "scipy>=1.14.1",
    "sentencepiece>=0.2.0",
    "soundfile>=0.12.1",
    "spandrel>=0.4.0",
    "tokenizers>=0.13.3",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchsde>=0.2.6",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
    "transformers>=4.28.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-nightly-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-nightly-cuda126", marker = "platform_system == 'Windows'" },
]
torchvision = [
    { index = "pytorch-nightly-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-nightly-cuda126", marker = "platform_system == 'Windows'" },
]
torchaudio = [
    { index = "pytorch-nightly-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-nightly-cuda126", marker = "platform_system == 'Windows'" },
]

[[tool.uv.index]]
name = "pytorch-nightly-cpu"
url = "https://download.pytorch.org/whl/nightly/cpu"
explicit = true
prereleases = "allow"

[[tool.uv.index]]
name = "pytorch-nightly-cuda126"
url = "https://download.pytorch.org/whl/nightly/cu126"
explicit = true
prereleases = "allow"
